--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: me@vijayp.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Been coding since I can remember. Currently a professional software
   engineer for over 10 years, primarily working in backend development
-  using .NET. Site is a bit WIP because I've never done frontend stuff.
+  using .NET. Site is extremely WIP.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://www.vijayp.dev # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
