--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,12 @@ minima:
     # - username: jekyll2
     #   instance: example.com
 
+  disqus:
+    shortname: vijayp-dev
+
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-header_pages:
+# header_pages:
 
 plugins:
  - jekyll-feed
