--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,22 +8,22 @@ jobs:
   build_site:
     runs-on: ubuntu-latest
     steps:
-        - name: Checkout
-          uses: actions/checkout@v3
-        - name: Install Node.js
-          uses: actions/setup-node@v3
-          with:
-            node-version: 18
-            cache: npm
-        - name: Install dependencies
-          run: npm install
-        - name: Build
-          run: npm run build
-        - name: Upload Artifacts
-          uses: actions/upload-pages-artifact@v1
-          with:
-            # this should match the `pages` option in your adapter-static options
-            path: 'build/'
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # this should match the `pages` option in your adapter-static options
+          path: "build/"
 
   deploy:
     needs: build_site
