--- a/.prettierrc
+++ b/.prettierrc
@@ -2,10 +2,23 @@
   "useTabs": false,
   "singleQuote": false,
   "trailingComma": "es5",
-  "printWidth": 100,
+  "printWidth": 80,
   "plugins": ["prettier-plugin-svelte"],
   "pluginSearchDirs": ["."],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    },
+    {
+      "files": "*.md",
+      "options": {
+        "proseWrap": "always"
+      }
+    }
+  ],
   "bracketSameLine": true,
   "svelteBracketNewLine": false,
   "bracketSpacing": true
