--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "dependencies": {
+    "@rodneylab/svelte-social-icons": "^0.0.28",
     "mdsvex": "^0.11.0"
   },
   "devDependencies": {
