--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,10 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          cache: pnpm
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
