--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version-file: .nvmrc
       - name: Setup Corepack
         run: corepack enable
       - name: Install dependencies
