Start adding job search route

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@rodneylab/svelte-social-icons": "^0.0.30",
+    "better-sqlite3": "^11.2.1",
     "mdsvex": "^0.12.3"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.4",
     "@sveltejs/kit": "^2.5.26",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/better-sqlite3": "^7.6.11",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "eslint": "^9.10.0",
