--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@rodneylab/svelte-social-icons": "^0.0.30",
+    "@supabase/supabase-js": "^2.45.4",
     "better-sqlite3": "^11.2.1",
     "gridjs": "^6.2.0",
     "gridjs-svelte": "^2.1.1",
