--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "singleQuote": false,
   "trailingComma": "es5",
   "printWidth": 80,
+  "tabWidth": 4,
   "plugins": ["prettier-plugin-svelte"],
   "overrides": [
     {
