Change tab size

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,23 +1,24 @@
 {
-  "useTabs": false,
-  "singleQuote": false,
-  "trailingComma": "es5",
-  "printWidth": 80,
-  "plugins": ["prettier-plugin-svelte"],
-  "overrides": [
-    {
-      "files": "*.svelte",
-      "options": {
-        "parser": "svelte"
-      }
-    },
-    {
-      "files": "*.md",
-      "options": {
-        "proseWrap": "always"
-      }
-    }
-  ],
-  "bracketSameLine": true,
-  "bracketSpacing": true
+    "useTabs": false,
+    "singleQuote": false,
+    "trailingComma": "es5",
+    "printWidth": 80,
+    "tabWidth": 4,
+    "plugins": ["prettier-plugin-svelte"],
+    "overrides": [
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte"
+            }
+        },
+        {
+            "files": "*.md",
+            "options": {
+                "proseWrap": "always"
+            }
+        }
+    ],
+    "bracketSameLine": true,
+    "bracketSpacing": true
 }
